--- a/employee_reg.html
+++ b/employee_reg.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Employee Registration</title>
-    <link href="/static/breadcrumb.css" rel="stylesheet">
-    <link href="/static/employee_reg.css" rel="stylesheet">
+    <link href="static/breadcrumb.css" rel="stylesheet">
+    <link href="static/employee_reg.css" rel="stylesheet">
 </head>
 <body>
     <ul class="breadcrumb">
-        <li><a href="/home.html">Home</a></li>
-        <li><a href="/signup_form.html">Sign-Up Form</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="signup_form.html">Sign-Up Form</a></li>
         <li>Employee Registration</li>
-        <li><a href="/product_table.html">Product Table</a></li>
-        <li><a href="/event_table.html">Event Table</a></li>
+        <li><a href="product_table.html">Product Table</a></li>
+        <li><a href="event_table.html">Event Table</a></li>
     </ul>
     <div class="container">
         <h1>Employee Registration</h1>
