--- a/event_table.html
+++ b/event_table.html
@@ -7,16 +7,16 @@ initial-scale=1.0">
     <title>HTML Table with Merged Cells</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
-    <link href="/static/event.css" rel="stylesheet">
-    <link href="/static/breadcrumb.css" rel="stylesheet">
+    <link href="static/event.css" rel="stylesheet">
+    <link href="static/breadcrumb.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="/static/images/event.css">
 </head>
 <body>
     <ul class="breadcrumb">
-        <li><a href="/home.html">Home</a></li>
-        <li><a href="/sign_up.html">Sign-Up Form</a></li>
-        <li><a href="/employee_reg.html">Employee Registration</a></li>
-        <li><a href="/product_table.html">Product Table</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="sign_up.html">Sign-Up Form</a></li>
+        <li><a href="employee_reg.html">Employee Registration</a></li>
+        <li><a href="product_table.html">Product Table</a></li>
         <li>Event Table</li>
     </ul>
     <div class="container text-center">
