--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
         }
 
         #intro {
-            background-image: url("/static/images/study.jpg");
+            background-image: url("static/images/study.jpg");
             background-repeat: no-repeat;
             background-size: cover; /* Cover the entire screen */
             height: 100vh;
@@ -46,10 +46,10 @@
     <div id="intro" class="container">
         <h1>App Dev Activities</h1>
         <h2>By Cedrick Chu</h2>
-        <a href="/signup_form.html">Sign-Up Form</a>
-        <a href="/employee_reg.html">Employee Registration</a>
-        <a href="/product_table.html">Product Table</a>
-        <a href="/event_table.html">Event Table</a>
+        <a href="signup_form.html">Sign-Up Form</a>
+        <a href="employee_reg.html">Employee Registration</a>
+        <a href="product_table.html">Product Table</a>
+        <a href="event_table.html">Event Table</a>
     </div>
 </bo
 </html>
