--- a/signup_form.html
+++ b/signup_form.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Form</title>
-    <link href="/static/breadcrumb.css" rel="stylesheet">
-    <link href="/static/signup_form.css" rel="stylesheet">
+    <link href="static/breadcrumb.css" rel="stylesheet">
+    <link href="static/signup_form.css" rel="stylesheet">
 </head>
 <body>
     <ul class="breadcrumb">
-        <li><a href="/home.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li>Sign-Up Form</li>
-        <li><a href="/employee_reg.html">Employee Registration</a></li>
-        <li><a href="/product_table.html">Product Table</a></li>
-        <li><a href="/event_table.html">Event Table</a></li>
+        <li><a href="employee_reg.html">Employee Registration</a></li>
+        <li><a href="product_table.html">Product Table</a></li>
+        <li><a href="event_table.html">Event Table</a></li>
     </ul>
     <div class="container">
         <h1>Sign Up</h1>
