--- a/employee_reg.html
+++ b/employee_reg.html
@@ -17,7 +17,7 @@
         <li><a href="event_table.html">Event Table</a></li>
     </ul>
     <div class="container">
-        <h1>Employee Registration</h1>
+        <h1>Employee Registrations</h1>
         <form action="#" method="post" id="registration-form">
             <div class="form-group">
                 <label for="last_name">Last Name:</label>
