--- a/event_table.html
+++ b/event_table.html
@@ -8,23 +8,34 @@ initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
     <link href="static/event.css" rel="stylesheet">
-    <link href="static/breadcrumb.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/static/images/event.css">
+    <link href="static/navbar.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="static/images/event.png">
+
 </head>
 <body>
-    <ul class="breadcrumb">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="sign_up.html">Sign-Up Form</a></li>
-        <li><a href="employee_reg.html">Employee Registration</a></li>
-        <li><a href="product_table.html">Product Table</a></li>
-        <li>Event Table</li>
-    </ul>
+    <nav class="navbar bg-dark border-bottom border-body">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="https://github.com/CedrickChu">
+            <img src="static/images/c.png" alt="Bootstrap" width="30" height="24">
+            </a>
+                <ul class="breadcrumb">
+                    <li><a href="home.hmtl">Home</a></li>
+                    <li><a href="signup_form.html">Sign-Up Form</a></li>
+                    <li><a href="employee_reg.html">Employee Registration</a></li>
+                    <li><a href="product_table.html">Product Table</a></li>
+                    <li>Event Table</li>
+            </ul>
+        </div>
+    </nav>
     <div class="container text-center">
         <div class="row">
             <div id="logo" class="col">
-                <img src="static/images/event.png" alt="event logo"
+                <img src="static/images/event.png" alt="event logo">
             </div>
-            <div id="heading" class="col-8">
+            <div id="logo2" class="col">
+                <img src="static/images/psu.png" alt="PSU logo">
+            </div>
+            <div id="heading" class="col-6">
                 Palawan State University
             </div>
 
