--- a/home.html
+++ b/home.html
@@ -51,5 +51,5 @@
         <a href="product_table.html">Product Table</a>
         <a href="event_table.html">Event Table</a>
     </div>
-</bo
+</body>
 </html>
