--- a/product_table.html
+++ b/product_table.html
@@ -6,22 +6,29 @@
 initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
-    <link href="static/breadcrumb.css" rel="stylesheet">
+    <link href="static/navbar.css" rel="stylesheet">
     <title>Product Data</title>
     <link href="static/product_table.css" rel="stylesheet">
 </head>
 
 <body>
-    <ul class="breadcrumb">
-        <li><a href="home.hmtl">Home</a></li>
-        <li><a href="signup_form.html">Sign-Up Form</a></li>
-        <li><a href="employee_reg.html">Employee Registration</a></li>
-        <li>Product Table</li>
-        <li><a href="event_table.html">Event Table</a></li>
-    </ul>
+    <nav class="navbar bg-dark border-bottom border-body">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="https://github.com/CedrickChu">
+            <img src="static/images/c.png" alt="Bootstrap" width="30" height="24">
+            </a>
+            <ul class="breadcrumb">
+            <li><a href="home.hmtl">Home</a></li>
+            <li><a href="signup_form.html">Sign-Up Form</a></li>
+            <li><a href="employee_reg.html">Employee Registration</a></li>
+            <li>Product Table</li>
+            <li><a href="event_table.html">Event Table</a></li>
+            </ul>
+        </div>
+    </nav>
+
+   
     <h1>Product Details</h1>
-
-
 
     <table class="table table-dark table-striped">
         <thead class="table-danger">
