--- a/signup_form.html
+++ b/signup_form.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Form</title>
-    <link href="static/breadcrumb.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="static/navbar.css" rel="stylesheet">
     <link href="static/signup_form.css" rel="stylesheet">
 </head>
 <body>
-    <ul class="breadcrumb">
-        <li><a href="home.html">Home</a></li>
-        <li>Sign-Up Form</li>
-        <li><a href="employee_reg.html">Employee Registration</a></li>
-        <li><a href="product_table.html">Product Table</a></li>
-        <li><a href="event_table.html">Event Table</a></li>
-    </ul>
+    <nav class="navbar bg-dark border-bottom border-body">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="https://github.com/CedrickChu">
+            <img src="static/images/c.png" alt="Bootstrap" width="30" height="24">
+            </a>
+                <ul class="breadcrumb">
+                <li><a href="home.html">Home</a></li>
+                <li>Sign-Up Form</li>
+                <li><a href="employee_reg.html">Employee Registration</a></li>
+                <li><a href="product_table">Product Table</a></li>
+                <li><a href="event_table.html">Event Table</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container">
         <h1>Sign Up</h1>
         <form id="registration-form" action="#" method="post">
