--- a/employee_reg.html
+++ b/employee_reg.html
@@ -16,7 +16,7 @@
             <img src="static/images/c.png" alt="Bootstrap" width="30" height="24">
             </a>
                 <ul class="breadcrumb">
-                    <li><a href="home.hmtl">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="signup_form.html">Sign-Up Form</a></li>
                     <li>Employee Registration</li>
                     <li><a href="product_table.html">Product Table</a></li>
