--- a/signup_form.html
+++ b/signup_form.html
@@ -18,7 +18,7 @@
                 <li><a href="home.html">Home</a></li>
                 <li>Sign-Up Form</li>
                 <li><a href="employee_reg.html">Employee Registration</a></li>
-                <li><a href="product_table">Product Table</a></li>
+                <li><a href="product_table.html">Product Table</a></li>
                 <li><a href="event_table.html">Event Table</a></li>
             </ul>
         </div>
