--- a/event_table.html
+++ b/event_table.html
@@ -19,7 +19,7 @@ initial-scale=1.0">
             <img src="static/images/c.png" alt="Bootstrap" width="30" height="24">
             </a>
                 <ul class="breadcrumb">
-                    <li><a href="home.hmtl">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="signup_form.html">Sign-Up Form</a></li>
                     <li><a href="employee_reg.html">Employee Registration</a></li>
                     <li><a href="product_table.html">Product Table</a></li>
