--- a/signup_form.html
+++ b/signup_form.html
@@ -68,7 +68,7 @@
 
                     document.getElementById("passwordMatchError").textContent = "";
 
-                    document.getElementById("passwordMatchError").textContent = "Registration Completed";
+                    document.getElementById("passwordMatchError").textContent = "";
 
                     this.submit();
                 }
