--- a/employee_reg.html
+++ b/employee_reg.html
@@ -10,20 +10,21 @@
     <link href="static/employee_reg.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar bg-dark border-bottom border-body">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="https://github.com/CedrickChu">
-            <img src="static/images/c.png" alt="Bootstrap" width="30" height="24">
-            </a>
-                <ul class="breadcrumb">
+        <nav class="navbar bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="https://github.com/CedrickChu">
+                    <img src="static/images/c.png" alt="Bootstrap" width="30" height="24">
+                </a>
+                <ul class="breadcrumb"> 
                     <li><a href="home.html">Home</a></li>
                     <li><a href="signup_form.html">Sign-Up Form</a></li>
                     <li>Employee Registration</li>
                     <li><a href="product_table.html">Product Table</a></li>
                     <li><a href="event_table.html">Event Table</a></li>
-            </ul>
-        </div>
-    </nav>
+                </ul>
+            </div>
+        </nav>
+
     <div class="container">
         <h1>Employee Registration</h1>
         <form action="#" method="post" id="registration-form">
