--- a/event_table.html
+++ b/event_table.html
@@ -13,7 +13,7 @@ initial-scale=1.0">
 
 </head>
 <body>
-    <nav class="navbar bg-dark border-bottom border-body">
+    <nav class="navbar bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="https://github.com/CedrickChu">
             <img src="static/images/c.png" alt="Bootstrap" width="30" height="24">
