--- a/product_table.html
+++ b/product_table.html
@@ -13,7 +13,7 @@ initial-scale=1.0">
 </head>
 
 <body>
-    <nav class="navbar bg-dark ">
+    <nav class="navbar bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="https://github.com/CedrickChu">
             <img src="static/images/c.png" alt="Bootstrap" width="30" height="24">
@@ -28,48 +28,49 @@ initial-scale=1.0">
         </div>
     </nav>
 
-   
-    <h1>Product Details</h1>
+   <main class="content">
+        <h1>Product Details</h1>
 
-    <table class="table table-dark table-striped">
-        <thead class="table-danger">
-            <tr>
-                <th>Product Name</th>
-                <th>Price</th>
-                <th>Availability</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Laptop</td>
-                <td>35,999 Pesos</td>
-                <td>In stock</td>
-            </tr>
-            <tr>
-                <td>Desktop</td>
-                <td>22,099 Pesos</td>
-                <td>Out of Stock</td>
+        <table class="table table-dark table-striped">
+            <thead class="table-danger">
+                <tr>
+                    <th>Product Name</th>
+                    <th>Price</th>
+                    <th>Availability</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Laptop</td>
+                    <td>35,999 Pesos</td>
+                    <td>In stock</td>
+                </tr>
+                <tr>
+                    <td>Desktop</td>
+                    <td>22,099 Pesos</td>
+                    <td>Out of Stock</td>
 
-            </tr>
-            <tr>
-                <td>Mouse</td>
-                <td>1,200 Pesos</td>
-                <td>In stock</td>
+                </tr>
+                <tr>
+                    <td>Mouse</td>
+                    <td>1,200 Pesos</td>
+                    <td>In stock</td>
 
-            </tr>
-            <tr>
-                <td>Webcam Pro</td>
-                <td> 2,895.00 Pesos</td>
-                <td>In stock</td>
+                </tr>
+                <tr>
+                    <td>Webcam Pro</td>
+                    <td> 2,895.00 Pesos</td>
+                    <td>In stock</td>
 
-            </tr>
-            <tr>
-                <td>Microphone</td>
-                <td>2,966,711</td>
-                <td>In stock</td>
-            </tr>
-        </tbody>
-    </table>
+                </tr>
+                <tr>
+                    <td>Microphone</td>
+                    <td>2,966,711</td>
+                    <td>In stock</td>
+                </tr>
+            </tbody>
+        </table>
+    </main>
 </body>
 
 </html>
