--- a/event_table.html
+++ b/event_table.html
@@ -76,7 +76,7 @@ initial-scale=1.0">
                     <td class="actColor">Live Art Demonstrations: Set up live art demonstrations where artists create artwork in real-time. Visitors can watch and interact with the artists while they work.</td>
                 </tr>
                 <tr>
-                    <td class="actColor">Artists' Q&A Panel: Arrange a panel discussion or Q&A session with participating artists, allowing visitors to ask questions and engage in discussions about art and creativity.</td>
+                    <td class="actColor">Artists' Q&A Panel: Arranged panel discussion or Q&A session with participating artists, allowing visitors to ask questions and engage in discussions about art and creativity.</td>
                 </tr>
             </tbody>
             <tbody>
