changing my logo

--- a/event_table.html
+++ b/event_table.html
@@ -16,7 +16,7 @@ initial-scale=1.0">
     <nav class="navbar bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="https://github.com/CedrickChu">
-            <img src="static/images/c.png" alt="Bootstrap" width="30" height="24">
+            <img src="static/images/chu.png" alt="Bootstrap" width="30" height="24">
             </a>
                 <ul class="breadcrumb">
                     <li><a href="home.html">Home</a></li>
