--- a/event_table.html
+++ b/event_table.html
@@ -6,10 +6,10 @@
 initial-scale=1.0">
     <title>HTML Table with Merged Cells</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
+    
     <link href="static/event.css" rel="stylesheet">
     <link href="static/navbar.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="static/images/event.png">
+    <link rel="icon" type="image/png" href="static/images/chu.png">
 
 </head>
 <body>
