--- a/product_table.html
+++ b/product_table.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,
 initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="static/images/chu.png">
 
     <link href="static/navbar.css" rel="stylesheet">
     <title>Product Data</title>
@@ -16,7 +17,7 @@ initial-scale=1.0">
     <nav class="navbar bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="https://github.com/CedrickChu">
-            <img src="static/images/c.png" alt="Bootstrap" width="30" height="24">
+            <img src="static/images/chu.png" alt="Bootstrap" width="30" height="24">
             </a>
             <ul class="breadcrumb">
             <li><a href="home.hmtl">Home</a></li>
