--- a/signup_form.html
+++ b/signup_form.html
@@ -7,13 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="static/navbar.css" rel="stylesheet">
     <link href="static/signup_form.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="static/images/chu.png">
 
 </head>
 <body>
     <nav class="navbar bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="https://github.com/CedrickChu">
-            <img src="static/images/c.png" alt="Bootstrap" width="30" height="24">
+            <img src="static/images/chu.png" alt="Bootstrap" width="30" height="24">
             </a>
                 <ul class="breadcrumb">
                 <li><a href="home.html">Home</a></li>
