--- a/event_table.html
+++ b/event_table.html
@@ -28,18 +28,16 @@ initial-scale=1.0">
         </div>
     </nav>
     <main class="content">
-        <div class="container text-center">
-            <div class="row">
-                <div id="logo" class="col">
-                    <img src="static/images/event.png" alt="event logo">
-                </div>
-                <div id="logo2" class="col">
-                    <img src="static/images/psu.png" alt="PSU logo">
-                </div>
-                <div id="heading" class="col-6">
-                    Palawan State University
-                </div>
-
+ 
+        <div class="row justify-content-md-center">
+            <div id="logo" class="col-md-auto">
+                <img src="static/images/event.png" alt="event logo">
+            </div>
+            <div id="heading" class="col-4 text-center">
+                Palawan State University
+            </div>
+            <div id="logo2" class="col-md-auto">
+                <img src="static/images/psu.png" alt="PSU logo">
             </div>
         </div>
         <table class="table">
