changing my home's background

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         }
 
         #intro {
-            background-image: url("static/images/study.jpg");
+            background-image: url("static/images/background.jpg");
             background-repeat: no-repeat;
             background-size: cover; /* Cover the entire screen */
             height: 100vh;
