adding stock photo in products table

--- a/home.html
+++ b/home.html
@@ -12,9 +12,9 @@
         }
 
         #intro {
-            background-image: url("static/images/background.jpg");
+            background-image: url("static/images/coding.jpg");
             background-repeat: no-repeat;
-            background-size: cover; /* Cover the entire screen */
+            background-size: cover;
             height: 100vh;
             display: flex;
             flex-direction: column;
