--- a/product_table.html
+++ b/product_table.html
@@ -20,7 +20,7 @@ initial-scale=1.0">
             <img src="static/images/chu.png" alt="Bootstrap" width="30" height="24">
             </a>
             <ul class="breadcrumb">
-            <li><a href="home.hmtl">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="signup_form.html">Sign-Up Form</a></li>
             <li><a href="employee_reg.html">Employee Registration</a></li>
             <li>Product Table</li>
@@ -35,37 +35,49 @@ initial-scale=1.0">
         <table class="table table-dark table-striped">
             <thead class="table-danger">
                 <tr>
-                    <th>Product Name</th>
+                    <th>Product Name
+                        
+                    </th>
                     <th>Price</th>
                     <th>Availability</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Laptop</td>
+                    <td>Laptop
+                        <img src="static/images/laptop.png" width="120px">
+                    </td>
                     <td>35,999 Pesos</td>
                     <td>In stock</td>
                 </tr>
                 <tr>
-                    <td>Desktop</td>
+                    <td>Desktop
+                        <img src="static/images/gamingpc.png" width="120px">
+                    </td>
                     <td>22,099 Pesos</td>
                     <td>Out of Stock</td>
 
                 </tr>
                 <tr>
-                    <td>Mouse</td>
+                    <td>Mouse
+                        <img src="static/images/gamingmouse.png" width="150px">
+                    </td>
                     <td>1,200 Pesos</td>
                     <td>In stock</td>
 
                 </tr>
                 <tr>
-                    <td>Webcam Pro</td>
+                    <td>Webcam Pro
+                        <img src="static/images/camerapro.png" width="120px">
+                    </td>
                     <td> 2,895 Pesos</td>
                     <td>In stock</td>
 
                 </tr>
                 <tr>
-                    <td>Microphone</td>
+                    <td>Microphone
+                        <img src="static/images/micpro.png" width="80px">
+                    </td>
                     <td>2,966 Pesos</td>
                     <td>In stock</td>
                 </tr>
